# setup-system

./: README.md  README.org  arch-packages.txt  cp_dotfiles.sh  file_paths.txt  install.sh  install_nodejs.sh  install_packages.py  manjaro-packages.txt  packages.txt  packages_from_source.sh  pre-install.sh  pyproject.toml  s.sh  set_dotfiles.sh  setup_system.sh  symlink_dotfiles.sh  tangle.sh  ubuntu-packages.txt  update.sh  zsh.sh
app/: __main__.py  data.py  git.py  read.py
app/data/: additional_commands.txt  commands.txt  dotfiles_paths.txt  file_paths.txt  manjaro-packages.txt  new_dotfiles_paths.txt  old_dotfiles_paths.txt  poetry.txt  repos_links.txt  shell-color-scripts.txt
app/data/needed_apps/: manjaro-packages.txt  npm.txt  pip.txt
app/data/postinstall/: mariadb.txt  nnn.txt  poetry.txt
app/dotfiles/: .gitconfig  .gitignore_global  .ideavimrc  .ufetch-manjaro  alacritty.yml  picom.conf
app/dotfiles/.doom.d/: config.el  init.el  packages.el
app/dotfiles/chrome/: userChrome.css  userChrome.css2  userChrome.css3
app/dotfiles/i3/: config
app/dotfiles/mpv/: config  input.conf
app/dotfiles/nvim/: init.vim
app/dotfiles/polybar/: check-updates.sh  config
app/dotfiles/rofi/: aesthetics.rasi  config  config.rasi  nord.rasi  rofi_config.rasi
app/dotfiles/vifm/: vifmrc
app/dotfiles/vifm/scripts/: imgt
app/dotfiles/zsh/: .zshrc  wezm.zsh-theme
setup_system/: __main__.py  handle_error.py  mode.py  needed_package.py  package.py  package_manager.py  package_service.py  read.py  service.py
setup_system/data/: package_managers.txt  post_install.txt
(+15 files in other folders)
