[tool.poetry]
name = "setup_system"
version = "0.1.0"
description = ""
authors = ["bakmenson <bakmenson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
